--- a/clients-app/package.json
+++ b/clients-app/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@auth0/angular-jwt": "^5.1.1",
     "@types/jquery": "^3.5.14",
     "bootstrap": "^4.6.2",
     "jquery": "^3.6.1",
